--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Anupam Das – Graphic Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Inter', sans-serif;
       background: #00090f;
@@ -52,16 +50,17 @@
       max-width: 1000px;
       margin: auto;
     }
-    .placeholder-img {
+    .profile-img {
       width: 180px;
       height: 180px;
-      background: #333;
+      object-fit: cover;
       border-radius: 50%;
       margin: auto;
       margin-bottom: 2rem;
+      display: block;
       transition: transform 0.3s ease;
     }
-    .placeholder-img:hover {
+    .profile-img:hover {
       transform: scale(1.05);
     }
     .divider {
@@ -71,14 +70,7 @@
       border-radius: 2px;
       opacity: 0.3;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-    }
-    .skill-wrapper {
-      margin-bottom: 1.5rem;
-    }
+    .skill-wrapper { margin-bottom: 1.5rem; }
     .skill-title {
       margin-bottom: 0.3rem;
       font-weight: 500;
@@ -100,9 +92,16 @@
       from { width: 0; }
       to { width: 100%; }
     }
+    ul {
+      padding-left: 1.2rem;
+      list-style-type: disc;
+    }
+    ul li::marker {
+      color: #7b7b7b;
+    }
     .thumbnail-gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: 1fr;
       gap: 1rem;
     }
     .thumbnail-gallery img {
@@ -113,25 +112,17 @@
     .thumbnail-gallery img:hover {
       transform: scale(1.05);
     }
-    ul {
-      padding-left: 1.2rem;
-      list-style-type: disc;
-    }
-    ul li::marker {
-      color: #7b7b7b;
-    }
   </style>
 </head>
 <body>
   <header data-aos="fade-down">
     <h1>Anupam Das</h1>
     <p>Graphic Designer</p>
-    <p style="margin-top: 0.5rem; font-style: italic; color: #999;">“Design is thinking made visual.”</p>
-    <a href="#" class="download-btn">Download CV</a>
+    <a href="cv-anupam-das.pdf" class="download-btn" download>Download CV</a>
   </header>
 
   <div class="container">
-    <div class="placeholder-img" data-aos="zoom-in"></div>
+    <img src="Propic_260625.jpg" alt="Profile Picture" class="profile-img" data-aos="zoom-in" />
 
     <section data-aos="fade-up">
       <h2>About Me</h2>
@@ -197,10 +188,9 @@
     <section data-aos="fade-up">
       <h2>Showcase</h2>
       <div class="thumbnail-gallery">
-        <a href="https://www.behance.net/anupambukpocket" target="_blank"><img src="https://via.placeholder.com/400x300?text=Project+1" alt="Project 1"></a>
-        <a href="https://www.behance.net/anupambukpocket" target="_blank"><img src="https://via.placeholder.com/400x300?text=Project+2" alt="Project 2"></a>
-        <a href="https://www.behance.net/anupambukpocket" target="_blank"><img src="https://via.placeholder.com/400x300?text=Project+3" alt="Project 3"></a>
-        <a href="https://www.behance.net/anupambukpocket" target="_blank"><img src="https://via.placeholder.com/400x300?text=Project+4" alt="Project 4"></a>
+        <a href="https://www.behance.net/anupambukpocket" target="_blank">
+          <img src="https://via.placeholder.com/800x500?text=My+Project+Gallery" alt="Visit My Behance">
+        </a>
       </div>
     </section>
 
@@ -210,15 +200,15 @@
         <li>Marital Status: Married (2024)</li>
         <li>Languages Known: Bengali, English, Hindi</li>
         <li>Location: Kolkata, India</li>
-        <li>Email: anupammotionmaac@gmail.com</li>
-        <li>Phone: +91 98044 66442 / +91 62906 48019</li>
+        <li>Email: <a href="mailto:anupammotionmaac@gmail.com">anupammotionmaac@gmail.com</a></li>
+        <li>Phone: <a href="tel:+919804466442">+91 98044 66442</a> / <a href="tel:+916290648019">+91 62906 48019</a></li>
       </ul>
     </section>
   </div>
 
   <footer data-aos="fade-up">
     <p>&copy; 2025 Anupam Das</p>
-    <a href="#" class="download-btn">Download CV</a>
+    <a href="cv-anupam-das.pdf" class="download-btn" download>Download CV</a>
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
